--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rn-storage",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "react-native AsyncStorage wrapper",
-  "main": "storage.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "NODE_ENV=test ava --tap | tap-spec"
   },
