--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-storage",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "react-native AsyncStorage wrapper",
   "main": "./src/index.js",
   "scripts": {
@@ -32,8 +32,7 @@
     "babel-preset-react-native": "^1.9.0",
     "tap-spec": "^4.1.1"
   },
-  "peerDependencies": {
-    "uuid": "^3.0.0"
-  },
-  "dependencies": {}
+  "dependencies": {
+    "uuid": "^3.0.1"
+  }
 }
