clean useless file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ node_modules/
 typings/
 example/node_modules/
 npm-debug.log
+yarn-error.log
+node_modules/
+example/node_modules/
+example/npm-debug.log
+example/yarn-error.log
